[gd_scene load_steps=12 format=3 uid="uid://brmmvfjwf8xhf"]

[ext_resource type="FontFile" uid="uid://8di0jvr25vat" path="res://assets/font/m5x7.ttf" id="1_aqm06"]
[ext_resource type="Script" uid="uid://bca1kmh016d1n" path="res://Scenes/UnitCard/UnitCard.gd" id="1_tqwnw"]
[ext_resource type="Resource" uid="uid://dsyfeq7hyv7xw" path="res://Data/Player/PlayerStats.tres" id="2_43kf1"]
[ext_resource type="Texture2D" uid="uid://c4awhqfup7o2k" path="res://assets/sprites/gold.png" id="2_tqwnw"]
[ext_resource type="Texture2D" uid="uid://cx1ivjobggp8n" path="res://assets/sprites/rogues.png" id="3_43kf1"]
[ext_resource type="Resource" uid="uid://c7vbpjgq3nhmk" path="res://Data/Units/Arthur.tres" id="3_dd6wd"]

[sub_resource type="LabelSettings" id="LabelSettings_dd6wd"]
line_spacing = 0.0
font = ExtResource("1_aqm06")
font_color = Color(0.6, 0.8627451, 1, 0.7294118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2k6e"]
bg_color = Color(0.07058824, 0.2901961, 0.18039216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lay4c"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.07058824, 0.2901961, 0.18039216, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_g86cr"]
atlas = ExtResource("3_43kf1")
region = Rect2(32, 96, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k4ijb"]
bg_color = Color(0, 0, 0, 1)

[node name="UnitCard" type="Button"]
custom_minimum_size = Vector2(80, 52)
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
script = ExtResource("1_tqwnw")
player_stats = ExtResource("2_43kf1")
unit_stats = ExtResource("3_dd6wd")

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.08235294, 0.1254902, 1)

[node name="Traits" type="Label" parent="BackGround"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 45.0
offset_bottom = 30.0
text = "Viking
Fighter"
label_settings = SubResource("LabelSettings_dd6wd")

[node name="Bttom" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 18)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y2k6e")

[node name="MarginContainer" type="MarginContainer" parent="Bttom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Bttom/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="UnitName" type="Label" parent="Bttom/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Arthur"

[node name="GoldContainer" type="HBoxContainer" parent="Bttom/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
alignment = 2

[node name="GoldIcon" type="TextureRect" parent="Bttom/MarginContainer/HBoxContainer/GoldContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_tqwnw")
stretch_mode = 5

[node name="GoldCost" type="Label" parent="Bttom/MarginContainer/HBoxContainer/GoldContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="Border" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lay4c")

[node name="UnitIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 4.0
offset_top = 1.0
offset_right = 36.0
offset_bottom = 33.0
grow_horizontal = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_g86cr")
expand_mode = 1
stretch_mode = 5

[node name="EmptyPlaceHolder" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k4ijb")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
